--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <%= image_tag( "chicago.jpg", :class => "d-block w-100")%>
+      <div class="carousel-caption d-none d-md-block">
+    <h5>Mi primer concierto</h5>
+    <p>Una experiencia unica en Chicago</p>
+  </div>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag( "la.jpg", :class => "d-block w-100")%>
+    </div>
+    <div class="carousel-item">
+      <%= image_tag( "ny.jpg", :class => "d-block w-100")%>
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
