add show event and WIP profile

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Diario</a>
+  <a class="navbar-brand" href="..">Diario</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Historias<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../events">Historias<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Nueva Entrada</a>
+        <a class="nav-link" href="../events/new">Nueva Entrada</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Perfil</a>
+        <a class="nav-link" href="../welcome/profile">Perfil</a>
       </li>
+      <!-- <li class="nav-item ">
+        <button type="button" class="btn btn-outline-primary " onclick="location.href='../welcome/login'">Log in</button>
+      </li> -->
     </ul>
   </div>
 </nav
