--- a/app/views/welcome/login.html.erb
+++ b/app/views/welcome/login.html.erb
@@ -1,3 +1,4 @@
+<p id="alert"><%= alert %></p>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -6,7 +7,8 @@
       <article class="card-body">
       <a href="" class="float-right btn btn-outline-primary">Sign up</a>
       <h4 class="card-title mb-4 mt-1">Sign in</h4>
-      	 <form>
+           <form>
+           <%= form_tag sessions_path do |form| %>
           <div class="form-group">
           	<label>Email</label>
               <input name="" class="form-control" placeholder="Email" type="email">
@@ -24,6 +26,7 @@
           <div class="form-group">
               <button type="submit" class="btn btn-primary btn-block"> Login  </button>
           </div> <!-- form-group// -->
+          <% end %>
       </form>
       </article>
     </div>
