--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,29 +1,3 @@
-<div class="container">
-  <div class="row">
-    <div class="col">
-    </div>
-    <div class="col-8 card">
-      <article class="card-body">
-      <h4 class="card-title mb-4 mt-1">Nueva historia</h4>
-      <form>
-        <div class="form-group">
-          <label for="exampleInputEmail1">Nombre</label>
-          <input type="string" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Evento">
+<h1>New </h1>
 
-        </div>
-        <div class="form-group">
-          <label for="exampleInputPassword1">Fecha</label>
-          <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Fecha">
-        </div>
-        <div class="form-group">
-         <label for="exampleFormControlTextarea1">Descripcion</label>
-         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-       </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
-      </article>
-    </div>
-    <div class="col">
-    </div>
-  </div>
-</div>
+<%= render 'form' %>
