--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark" >
   <a class="navbar-brand" href="..">Diario</a>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item" id= "nav-events">
         <a class="nav-link" href="../events">Historias<span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id= "nav-event">
         <a class="nav-link" href="../events/new">Nueva Entrada</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" id= "nav-profile">
         <a class="nav-link" href="../welcome/profile">Perfil</a>
       </li>
       <!-- <li class="nav-item ">
