--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -22,7 +22,7 @@
   
     <div class="field">
       <%= f.label :descritption %>
-      <%= f.text_field :descritption, id: :descritption, class: 'form-control'%>
+      <%= f.text_area :descritption, id: :descritption, class: 'form-control'%>
     </div>
   
   <br>
