--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -9,6 +9,8 @@
         <%= image_tag( "profile.jpg", :class => "rounded mx-auto d-block")%>
         <br>
         <p class="mb-1"><%= current_user.email%></p>
+        <p class="mb-1"><%= current_user.name%></p>
+        <p class="mb-1"><%= current_user.lastname%></p>
     </article>
     </div>
     <div class="col-5 card">
