--- a/app/views/welcome/profile.html.erb
+++ b/app/views/welcome/profile.html.erb
@@ -1,4 +1,3 @@
-
 <div class="container">
   <div class="row">
     <div class="col-1">
@@ -6,36 +5,25 @@
     <div class="col-4 card">
       <article class="card-body">
         <%= image_tag( "profile.jpg", :class => "rounded mx-auto d-block")%>
+        <br>
+        <p class="mb-1"><%= current_user.email%></p>
+        <p class="mb-1"><%= current_user.name%></p>
+        <p class="mb-1"><%= current_user.lastname%></p>
     </article>
     </div>
     <div class="col-5 card">
       <article class="card-body">
         <div class="list-group">
+        <% @events.each do |event| %>
           <a href="../events/1" class="list-group-item list-group-item-action flex-column align-items-start">
             <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">List group item heading</h5>
-              <small>3 days ago</small>
+              <h5 class="mb-1"><%= event.name %></h5>
+              <small><%= event.event_date %></small>
             </div>
-            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            <small>Donec id elit non mi porta.</small>
+            <p class="mb-1"><%= event.descritption %></p>
           </a>
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">List group item heading</h5>
-              <small class="text-muted">3 days ago</small>
-            </div>
-            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            <small class="text-muted">Donec id elit non mi porta.</small>
-          </a>
-          <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1">List group item heading</h5>
-              <small class="text-muted">3 days ago</small>
-            </div>
-            <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
-            <small class="text-muted">Donec id elit non mi porta.</small>
-          </a>
-    </div>
+          <% end %>
+        </div>
     </article>
     </div>
 
