--- a/app/views/events/publicindex.html.erb
+++ b/app/views/events/publicindex.html.erb
@@ -5,7 +5,7 @@
     <div class="col-8">
       <nav class="navbar navbar-light bg-light">
         <form class="form-inline">
-          <%= link_to "Historias publicas", publicindex_events_path, id: "open-contacts-dialog-btn", class: "btn btn-outline-success my-2 my-sm-0" %>   
+          <%= link_to "Mis Historias", events_path, id: "open-contacts-dialog-btn", class: "btn btn-outline-success my-2 my-sm-0" %>
         </form>
       </nav>
 
