--- a/app/views/welcome/profile.html.erb
+++ b/app/views/welcome/profile.html.erb
@@ -15,13 +15,13 @@
       <article class="card-body">
         <div class="list-group">
         <% @events.each do |event| %>
-          <a href="../events/1" class="list-group-item list-group-item-action flex-column align-items-start">
-            <div class="d-flex w-100 justify-content-between">
-              <h5 class="mb-1"><%= event.name %></h5>
-              <small><%= event.event_date %></small>
-            </div>
-            <p class="mb-1"><%= event.descritption %></p>
-          </a>
+        <div class="list-group-item list-group-item-action flex-column align-items-start">
+          <div class="d-flex w-100 justify-content-between">
+            <h5 class="mb-1"><%=  link_to event.name, event  %></h5>
+            <small><%= event.event_date %></small>
+          </div>
+          <p class="mb-1"><%= event.descritption %></p>
+        </div>
           <% end %>
         </div>
     </article>
