--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,13 +5,13 @@
 
       <%if (current_user)%>
       <li class="nav-item" id= "nav-events">
-        <a class="nav-link" href="../events">Historias<span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="../../events">Historias<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item" id= "nav-event">
-        <a class="nav-link" href="../events/new">Nueva Entrada</a>
+        <a class="nav-link" href="../../events/new">Nueva Entrada</a>
       </li>
       <li class="nav-item" id= "nav-profile">
-        <a class="nav-link" href="../welcome/profile">Perfil</a>
+        <a class="nav-link" href="../../welcome/profile">Perfil</a>
       </li>
       <li class="nav-item ">
         <button type="button" class="btn btn-outline-primary " onclick="location.href='../logout'">Log out</button>
